--- a/src/components/checkbox/style.scss
+++ b/src/components/checkbox/style.scss
@@ -33,5 +33,5 @@ input[type='checkbox']#checkbox:checked+label {
 	display: inline-block;
 	width: 24px;
 	height: 24px;
-	background-color: $black;
+	background-color: $white;
 }
