--- a/src/components/todo/style.scss
+++ b/src/components/todo/style.scss
@@ -1,5 +1,40 @@
+@import '../../scss/color';
+
 .todo {
 	width: 100%;
+	&__title {
+		height: 76px;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		padding: 0 32px;
+		background-color: $grey10;
+		> div {
+			display: flex;
+			align-items: center;
+			.checkbox {
+				margin-right: 16px;
+			}
+			&:last-child {
+				font-size: 24px;
+				svg {
+					&:first-child {
+						margin-right: 32px;
+					}
+				}
+			}
+		}
+		&-input {
+			font-size: 24px;
+			background-color: transparent;
+			line-height: 28px;
+			border: 0;
+			width: 400px;
+			&::placeholder {
+				color: $black;
+			}
+		}
+	}
 	&__footer {
 		display: flex;
 	}
