--- a/src/components/todo/style.scss
+++ b/src/components/todo/style.scss
@@ -2,6 +2,18 @@
 
 .todo {
 	width: 100%;
+	&__add {
+		width: 100%;
+		padding: 18px 30px;
+		line-height: 24px;
+		font-size: 24px;
+		background-color: $white;
+		border: 2px solid $grey30;
+		color: $grey30;
+		box-sizing: border-box;
+		text-align: left;
+		cursor: pointer;
+	}
 	&__title {
 		height: 76px;
 		display: flex;
@@ -9,6 +21,7 @@
 		align-items: center;
 		padding: 0 32px;
 		background-color: $grey10;
+		margin-bottom: 3px;
 		> div {
 			display: flex;
 			align-items: center;
@@ -34,6 +47,9 @@
 				color: $black;
 			}
 		}
+	}
+	&__content {
+		background-color: $grey10;
 	}
 	&__footer {
 		display: flex;
