--- a/src/components/todo/style.scss
+++ b/src/components/todo/style.scss
@@ -75,16 +75,13 @@
 					border: 0px;
 				}
 			}
-			&--date,
 			&--time {
 				width: 162px;
 				height: 35px;
 				box-sizing: border-box;
 				border: 0;
 				padding: 8px 16px;
-			}
-			&--date {
-				margin-right: 8px;
+				font-size: 14px;
 			}
 		}
 	}
