--- a/src/components/todo-bar/style.scss
+++ b/src/components/todo-bar/style.scss
@@ -6,7 +6,9 @@
 	padding: 24px 32px 16px 32px;
 	background-color: $grey10;
 	cursor: pointer;
-
+	&--important {
+		background-color: $light-orange;
+	}
 	&__title {
 		display: flex;
 		justify-content: space-between;
